# onenote-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/onenote_mcp/: __init__.py  client.py  server.py
